@@ -2,7 +2,7 @@
 .de Id
 .ds Dt \\$4 \\$5
 ..
-.Id $Id: startup-config.5,v 1.13 2005-09-02 23:59:56 bodea Exp $
+.Id $Id: startup-config.5,v 1.14 2005-09-15 09:34:49 bodea Exp $
 .TH STARTUP-CONFIG 5 "\*(Dt" L2TPNS "File Formats and Conventions"
 .SH NAME
 startup\-config \- configuration file for l2tpns
@@ -72,6 +72,9 @@ Number of configure requests to send before giving up (default: 10).
 .B ppp_max_failure
 Number of Configure-Nak requests to send before sending a
 Configure-Reject (default: 5).
+.TP
+.B ppp_mru
+PPP link MRU (default: 1452).
 .TP
 .BR primary_dns , " secondary_dns"
 Whenever a PPP connection is established, DNS servers will be sent to the
